--- a/externalModules/TetGen/README
+++ b/externalModules/TetGen/README
@@ -1,11 +1,11 @@
 This is TetGen version 1.6.0 (released on August 31, 2020)
 
 Please see the documentation of TetGen for compiling and using TetGen.
-It is available at the following link:
+The source code and documentation is available at the following link:
 
             http://www.tetgen.org
 
-For more information on this product, contact :
+For more information on this product, contact:
 
   Hang Si
   Research Group of Numerical Mathematics and Scientific Computing
